Whitespace fix

--- a/css/ahnaf.css
+++ b/css/ahnaf.css
@@ -1,9 +1,12 @@
 @media only screen and (max-width: 767px) {
+
     html {
         text-align: center;
         font-family: 'Bungee Outline', cursive;
+        margin: 0;
+        padding: 0;
 
-        background: url(images/nyc.jpg) no-repeat center center fixed; 
+        background: url(images/nyc.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
